# report_generator

./: .gitignore  README.md  main.py  pyproject.toml
app/models/: base.py  deepseek_model.py  factory.py  gemini_model.py  openai_model.py
gradio_app/ChatBot/: app.py
gradio_app/CheckEval/: app.py
gradio_app/CheckEval_eval/: app.py
